--- a/gb/22/11/1/n13856750.md
+++ b/gb/22/11/1/n13856750.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>消费者信心降至疫情封锁初期水平</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/09/id13834405-IMG_6444-600x400.jpg" />
 <h6>通货膨胀高涨打击了消费者信心。（天睿／大纪元）
 </h6>
 <hr>
-<p>【大纪元2022年11月01日讯】（大纪元记者天睿澳洲悉尼编译报导）受<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%80%9A%E8%B4%A7%E8%86%A8%E8%83%80.md#1">通货膨胀</a>超出预期的影响，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E8%80%85%E4%BF%A1%E5%BF%83.md#1">消费者信心</a>已经降至疫情封锁初期的水平。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E8%80%85%E4%BF%A1%E5%BF%83.md#1">消费者信心</a>指数已经连续5周下降。在储备银行即将公布11月现金利率之前，澳新银行—罗伊摩根（ANZ-Roy Morgan）的周消费者信心指数再度下降1.5%。</p>
-<p>今年第三季度的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%80%9A%E8%B4%A7%E8%86%A8%E8%83%80.md#1">通货膨胀</a>率达到1.8%，年度通货膨胀率高达7.3%，超出市场预期。</p>
+<p>【大纪元2022年11月01日讯】（大纪元记者天睿澳洲悉尼编译报导）受通货膨胀超出预期的影响，消费者信心已经降至疫情封锁初期的水平。</p>
+<p>消费者信心指数已经连续5周下降。在储备银行即将公布11月现金利率之前，澳新银行—罗伊摩根（ANZ-Roy Morgan）的周消费者信心指数再度下降1.5%。</p>
+<p>今年第三季度的通货膨胀率达到1.8%，年度通货膨胀率高达7.3%，超出市场预期。</p>
 <p>澳新银行经济部主管普兰克（David Plank）说，对未来加息的预期导致偿还抵押贷款的人信心下降了15.6%。 “对生活成本的担忧，以及对澳洲储备银行更多加息的预期，导致（消费者）信心下降到疫情封锁初期几周内的水平。”</p>
 <p>他表示，有迹象表明，消费者开始缩减开支，每年通常在这个时候出现的假日消费增长还没有出现。</p>
 <p>然而，最新的零售数据显示，9月的零售额又增长了0.6%，但这可能是通货膨胀造成的增长。◇</p>
@@ -16,41 +16,41 @@
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击</strong><strong>?<ahref="http://dajiyuan.com.au/" data-cke-saved-href="http://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/26/n13853081.md#1">近八成受访者对预算不满 新州指资金分配不公</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/27/n13853805.md#1">实际通胀率过高 四大银行修改加息预期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/27/n13854297.md#1">调查：下次加息或导致50万人被迫卖房</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/28/n13854352.md#1">报告：工党新预算让高收入及有孩家庭受益最多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118401.md#1">加息难解房市升温 全澳五分之四地区房价上涨</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118391.md#1">悉尼男涉嫌策划租房骗局 诈骗六万元被起诉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118319.md#1">“黑五”促销在即 四成澳洲零售商已开始打折</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118310.md#1">官员：犯罪分子利用奢侈品 以工业规模洗钱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118321.md#1">参议院查断网原因 Optus总裁接受质询</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118263.md#1">反干预法首案开审 杨怡生被控微妙影响澳洲政策</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/26/n13853081.md#1">近八成受访者对预算不满 新州指资金分配不公</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/27/n13853805.md#1">实际通胀率过高 四大银行修改加息预期</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/27/n13854297.md#1">调查：下次加息或导致50万人被迫卖房</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/28/n13854352.md#1">报告：工党新预算让高收入及有孩家庭受益最多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342052.md#1">首都行政区一所新公立小学将开始建设</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342056.md#1">海外移民助堪培拉人口超47万 生育率仍下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342054.md#1">过去四年 堪培拉人口增速超过悉尼墨尔本</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342605.md#1">黑社会通讯平台被破 警方查获近千万加密货币</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342539.md#1">调查：攀比消费致六百多万澳人超支负债</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342577.md#1">仅两成多澳洲人对财务状况感到满意</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/29/n10004659.md#1" target="_blank">共产暴政录：批判武训，拒绝特蕾莎修女</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/2/n11425658.md#1" target="_blank">李小刚：中国大饥荒饿死3755.8万人？！</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115070.md#1">印尼巴东山发现至今最古老金字塔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112353.md#1">很久很久以前：维多利亚时代的仙子画</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113379.md#1">【未解之谜】马前课（下）红朝国运大变更？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112219.md#1">跟我学唐诗（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115416.md#1">霸王别姬后 虞姬再见项羽 另外时空解谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117145.md#1">【十字路口】欲干预美台大选 中共末日时钟敲响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14117952.md#1">【马克时空】B-21如约首飞 六代机时代来临</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14118034.md#1">【时事军事】从B-21首飞看隐身技术高峰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14116626.md#1">2023黑五提前开跑 5大类商品最受青睐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14116582.md#1">大陆扫地机器人滞销 厂家降价求售</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116441.md#1">王友群：从王岐山的两个秘书被查办说开去</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116452.md#1">梁朝伟拎金鸡奖座一小举动 惹小粉红玻璃心碎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116517.md#1">近年身边友人病亡多 港星廖伟雄总结惊人原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14115941.md#1">《惊奇队长2》票房差 作家史蒂芬金表达看法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117273.md#1">中国独立导演郭珍明被限制出境 自曝护照被剪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116440.md#1">陆影视巨头华谊兄弟卖孙公司抵债 计3.5亿元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116068.md#1">听专家的话 这样存放面包可以放更久</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14114677.md#1">乐高乐园：创意无限的奇妙之旅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116484.md#1">“水果之神”葡萄抗老防癌 8技巧教你吃对葡萄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14108806.md#1">睡不好老得快易健忘！专家7招找回睡眠好品质</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14116882.md#1">当心旅游诈骗 旅游达人也曾犯菜鸟级错误</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342225.md#1">《对我而言，你是珍贵的》：家之所以为家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345929.md#1">【时事金扫描】针对中共 美军两大台海密战计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343377.md#1">【环球直击】哈马斯袭击以色列一周年 各地悼念</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345153.md#1">【百年真相】最得宋庆龄信任 此人为何寻短见？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344939.md#1">若有1000美元闲钱 八项明智的理财生财之道</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344745.md#1">女星李一桐搭机光脚蹭座垫 视频曝光引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344719.md#1">副歌交由现场观众合唱 李玉刚遭疑“躲高音”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339916.md#1">拉筋强肌助眠 改善健康 踮脚尖五好处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/1/n13856750.htm">消费者信心降至疫情封锁初期水平</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/11/1/n13856750.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/1/n13856750.htm">消费者信心降至疫情封锁初期水平</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/11/1/n13856750.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
